--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,3 +1,4 @@
+
 //Menu botton
 
 .menu-btn{
@@ -39,5 +40,101 @@
                 transform: rotate(-45deg) translate(2px, 0) scale(1.3);
             }
         }
+    }
+}
+
+//Menu Overlay
+
+.menu{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    visibility: hidden;
+    
+    &.show{
+    visibility: visible;
+        
+    }
+
+    &-branding, 
+    &-nav{
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: center;
+        width: 50%;
+        height: 100vh;
+        float: left;
+        overflow: hidden;
+    }
+
+    //nav side
+    &-nav{
+        opacity: 0.9;
+
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        background: darken($primary-color, 5);
+        transform: translate3d(0, -100%, 0);
+        @include easeOut;
+        &.show{
+            //slide in from top
+            transform: translate3d(0, 0, 0);
+
+        }
+    }
+    //branding side
+    &-branding{
+        opacity: 0.95;
+        background: $primary-color;
+        transform: translate3d(0, 100%, 0);
+        @include easeOut;
+        &.show{
+            //slide in from top
+            transform: translate3d(0, 0, 0);
+
+        }
+        .portrait{
+            width: 250px;
+            height: 250px;
+            background: url(../img/1575023250192.jpg);
+            border-radius: 50%;
+            border: solid 3px $secondary-color;
+        }
+    }
+    .nav-item{
+        transform: translate3d(600px, 0, 0);
+        @include easeOut;
+        &.show{
+            //slide in from right
+            transform: translate3d(0, 0, 0);
+
+        }
+        &.current > a{
+            color: $secondary-color;
+        }
+    }
+    .nav-link{
+        display: inline-block;
+        position: relative;
+        font-size: 30px;
+        text-decoration: none;
+        text-transform: uppercase;
+        padding: 1rem 0;
+        font-weight: 300;
+        color: #fff;
+        @include easeOut;
+
+        &:hover{
+            color: $secondary-color;
+        }
+    }
+}
+
+//delay each nav item slide by 0.1s
+@for $x from 1 through 4{
+    .nav-item:nth-child(#{$x}){
+        transition-delay: $x * .2s;
     }
 }
