--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -2,19 +2,66 @@
 @include mediaXl{
     
 }
+
 // Desktops & Laptops
 @include mediaLg{
 
 }
+
 // Tablets & Small Laptops
 @include mediaMd{
-    main{
+    main#home{
         align-items: center;
         text-align: center;
+
+        .lg-heading{
+            line-height: 1;
+            margin-bottom: 1rem;
+           
+        }
+    }
+    ul.menu-nav,
+    div.menu-branding{
+        float: none;
+        width: 100%;
+        min-height: 0;
+        &.show{
+            transform: translate3d(0,0,0);
+        }
+    }
+    .menu-nav{
+        height: 75vh;
+        font-size: 24px;
+        transform: translate3d(-100%,0,0);
+    }
+    .menu-branding{
+        height: 25vh;
+        transform: translate3d(100%,0 ,0);
+        .portrait{
+            background: url(../img/1575023250192-small.jpg);
+            width: 150px;
+            height: 150px;
+        }
     }
 
 }
+
 // Smartphones
 @include mediaSm{
+    main#home .lg-heading{
+        margin-top: 7vh;
+        font-size: 4rem;
+        overflow: hidden;
 
+    }
+    .menu-branding{
+        height: 25vh;
+        transform: translate3d(100%,0 ,0);
+        .portrait{
+            background: url(../img/1575023250192-small.jpg);
+            width: 120px;
+            height: 120px;
+            background-position-x: 40%;
+        }
+    }
 }
