--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -33,11 +33,18 @@ $background-opacity:0.7;
 }
 
 
+// Set Text Color
+@function set-text-color($color){
+    @if (lightness($color) > 40){
+        @return #000;
+    } @else {
+        @return #fff;
+    }
+}
+
+
+
 //Media query mixins
-
-
-
-
 
 @mixin mediaXl{
     @media screen and (min-width:1171px){
