--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -15,7 +15,7 @@
         width: 28px;
         height: 3px;
         margin: 0 0 5px 0;
-        background: #fff;
+        background: set-text-color($primary-color);
         @include easeOut;
     }
     //Rotate Into X With Menu Lines
@@ -123,7 +123,7 @@
         text-transform: uppercase;
         padding: 1rem 0;
         font-weight: 400;
-        color: #fff;
+        color: set-text-color($primary-color);
         @include easeOut;
 
         &:hover{
