--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -10,7 +10,8 @@
 
 // Tablets & Small Laptops
 @include mediaMd{
-    main#home{
+    main#home,
+    main#about{
         align-items: center;
         text-align: center;
 
@@ -33,35 +34,62 @@
         height: 75vh;
         font-size: 24px;
         transform: translate3d(-100%,0,0);
+        justify-content: flex-start;
+        padding-top: 1rem;
     }
     .menu-branding{
         height: 25vh;
         transform: translate3d(100%,0 ,0);
+        padding-bottom: 2rem;
+        justify-content: flex-end;
         .portrait{
             background: url(../img/1575023250192-small.jpg);
             width: 150px;
             height: 150px;
         }
     }
-
+    .about-info{
+        grid-template-areas: 
+        'bioimage'
+        'bio'
+        'job1'
+        'job2'
+        'job3';
+        grid-template-columns: 1fr;
+    }
 }
 
 // Smartphones
 @include mediaSm{
-    main#home .lg-heading{
-        margin-top: 7vh;
-        font-size: 4rem;
-        overflow: hidden;
+    main{
+        &#home .lg-heading,
+        &#about .lg-heading{
+            margin-top: 7vh;
+            font-size: 4rem;
+            overflow: hidden;
+    
+        }
+
 
     }
     .menu-branding{
         height: 25vh;
         transform: translate3d(100%,0 ,0);
+        color: red;
+        padding-bottom: 2rem;
+        justify-content: flex-end;
+
         .portrait{
             background: url(../img/1575023250192-small.jpg);
-            width: 120px;
-            height: 120px;
+            width: 130px;
+            height: 130px;
             background-position-x: 40%;
         }
     }
+    .menu-nav{
+        justify-content: flex-start;
+        padding-top: 1rem;
+
+    }
+
 }
