--- a/scss/app.scss
+++ b/scss/app.scss
@@ -3,7 +3,6 @@
 
 @import 'menu';
 
-@import 'mobile';
 
 
 
@@ -22,7 +21,7 @@ html {
 body {
     @include background;
     background: $primary-color;
-    color: #fff;
+    color: set-text-color($primary-color);
     height: 100%;
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -48,7 +47,7 @@ h3 {
 }
 
 a{
-    color: #fff;
+    color: set-text-color($primary-color);
     text-decoration: none;
 }
 
@@ -64,8 +63,9 @@ header{
 }
 
 main{
-    height: 100%;
+    min-height: calc(100vh - 60px);
     padding: 4rem;
+    overflow: hidden;
 
     .icons{
         margin-top: 1rem;
@@ -89,3 +89,53 @@ main{
 
     }
 }
+
+.about-info{
+    display: grid;
+    grid-gap: 30px;
+    grid-template-areas: 
+    'bioimage bio bio'
+    'job1 job2 job3';
+    grid-template-columns: repeat(3,minmax(12em, 1fr));
+    .bio-image{
+        grid-area:bioimage;
+        margin: auto;
+        border-radius: 50%;
+        border: $secondary-color 3px solid ;
+
+    }
+    .bio{
+        grid-area: bio;
+        font-size: 1.5rem;
+    }
+    .job-1{
+        grid-area: job1;
+    }
+    .job-2{
+        grid-area: job2;
+    }
+    .job-3{
+        grid-area: job3;
+    }
+    .job{
+        display: flex;
+        flex-direction: column;
+        background:lighten($primary-color,5);
+        min-height: 20rem;
+        padding: .5rem;
+        border-bottom: $secondary-color 5px solid;
+        p{
+            margin-bottom: auto;
+        }
+    }
+}
+
+#main-footer{
+    text-align: center;
+    padding: 1rem;
+    background: darken($primary-color,10);
+    color: set-text-color($primary-color);
+    height: 60px;
+}
+
+@import 'mobile';
