--- a/scss/app.scss
+++ b/scss/app.scss
@@ -129,6 +129,48 @@ main{
         }
     }
 }
+//Work/Projects
+.projects{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: .7rem;
+
+    img{
+        width: 100%;
+        border: 3px #fff solid;
+        &:hover{
+            opacity: .5;
+            border-color: $secondary-color;
+            @include easeOut
+        }
+    }
+}
+
+
+//Bottom styles
+
+.btn{
+    display: block;
+    padding: .5em 1em;
+    border: 0;
+    margin-bottom: .3em;
+    &:hover{
+        background: $secondary-color;
+        color: set-text-color($secondary-color);
+    }
+}
+
+.btn-dark{
+    @extend .btn;
+    background: darken($primary-color,50);
+    color: #fff;
+}
+
+.btn-light{
+    @extend .btn;
+    background: lighten($primary-color,50);
+    color: #333;
+}
 
 #main-footer{
     text-align: center;
